Ajout favoris et map

--- a/TP1/www/index.html
+++ b/TP1/www/index.html
@@ -40,9 +40,11 @@
         <div id="nom_ville"></div>
         <div id="description"></div>
         <div id="temperature"></div>
+
         <div id="favoris"></div>
+
         <div id="ajouterFavoris"></div>
-        <div id="divMap"><div style='width: 500px; height: 500px;'></div></div>
+        <div id="divMap" style='width: 500px; height: 500px;'></div>
 
     </body>
 
